# LDLWinToolBox

./: .gitignore  AGENTS.md  AGENTS.md.bak  ANALYSIS.md  LDLWinToolBox.bat  LDLWinToolBox.spec  MEMORY.md  PROMPT_GUIDE.md  README.md  ldlwintoolbox.py  pyproject.toml  toolbox_base.py
.github/workflows/: ci.yml  release.yml
features/: bitlocker_disable.py  browser_ai_killer.py  cleanup_config.py  defender_tools.py  disk_health.py  driver_inventory.py  event_log_clear.py  export_report.py  log_viewer.py  low_latency_mode.py  network_reset.py  network_snapshot.py  recovery_tools.py  self_update.py  service_health.py  ssd_trim.py  system_cleanup.py  system_info.py  system_repair.py  windows_update.py  winget_upgrade.py  winsxs_cleanup.py
memory/: 2026-05-25-addendum.md  2026-05-25.md  2026-06-07.md  2026-06-09.md  2026-06-13.md  2026-06-16.md  2026-06-17.md  2026-07-05.md  feature-ideas.md  tasks.md
scripts/: check.ps1
